objects/Case.object
<CustomObject>
    <sharingModel>ReadWrite</sharingModel>
    <businessProcesses>
        <fullName>CASE</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GC1040</fullName>
                </value>
                <value>
                    <fullName>GC1060</fullName>
                </value>
                <value>
                    <fullName>GC3020</fullName>
                </value>
                <value>
                    <fullName>GC3040</fullName>
                </value>
                <value>
                    <fullName>GC3060</fullName>
                </value>
                <value>
                    <fullName>GC5020</fullName>
                </value>
                <value>
                    <fullName>GC5040</fullName>
                </value>
                <value>
                    <fullName>GC5060</fullName>
                </value>
                <value>
                    <fullName>GC1020</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLAViolation__c</fullName>
        <label>SLA Violation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Owner_Name__c</fullName>
        <label>Account Owner Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PotentialLiability__c</fullName>
        <label>Potential Liability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EngineeringReqNumber__c</fullName>
        <label>Engineering Req Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_Since_Last_Update__c</fullName>
        <formula>TODAY() -   Account.LastActivityDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Last Update</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Owner_Name_Process__c</fullName>
        <label>Account Owner Name (Process)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <recordTypes>
        <fullName>Assignment</fullName>
        <active>true</active>
        <businessProcess>CASE</businessProcess>
        <label>Assignment</label>
    </recordTypes>
</CustomObject>